remove mdeic words

--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -8,7 +8,7 @@
 
   <title>Психолог онлайн — Помощь при тревоге и панических атаках</title>
   <meta name="description"
-    content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%. Онлайн консультации, конфиденциально.">
+    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
   <meta name="keywords"
     content="психолог онлайн тревожность, психотерапия тревоги онлайн, панические атаки психолог онлайн, КПТ тревога онлайн, когнитивно-поведенческая терапия, психотерапевт онлайн">
   <meta name="author" content="Ксения Парваткина">
@@ -29,7 +29,7 @@
   <meta property="og:url" content="http://localhost:1313/v/a/">
   <meta property="og:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta property="og:description"
-    content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%. Онлайн консультации, конфиденциально.">
+    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
   
   
   <meta property="og:image" content="http://localhost:1313/images/psychologist-portrait_hu_85f12c48c6b6ccf5.jpg">
@@ -43,7 +43,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta name="twitter:description"
-    content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%.">
+    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод.">
   
   
   <meta name="twitter:image" content="http://localhost:1313/images/psychologist-portrait_hu_85f12c48c6b6ccf5.jpg">
@@ -120,7 +120,7 @@
             "name": "А если не поможет?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Когнитивно-поведенческая терапия — метод с доказанной эффективностью 85% при тревожных расстройствах. После бесплатной диагностики вы поймёте, подходит ли КПТ для вашего случая."
+              "text": "Когнитивно-поведенческая терапия — научно обоснованный метод работы с тревожными расстройствами. После бесплатной диагностики вы поймёте, подходит ли КПТ для вашего случая."
             }
           },
           {
@@ -128,7 +128,7 @@
             "name": "Сколько займёт времени?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Краткосрочная терапия: 8-15 сессий (2-4 месяца при частоте 1 раз в неделю). Первые улучшения обычно после 3-4 сессий."
+              "text": "Краткосрочная работа: 8-15 сессий (2-4 месяца при частоте 1 раз в неделю). Первые улучшения обычно после 3-4 сессий."
             }
           },
           {
@@ -379,33 +379,33 @@
   
   <section class="benefits" data-block="benefits">
   <div class="container">
-    <h2 class="section__title">Как помогает терапия</h2>
+    <h2 class="section__title">Как помогает консультирование</h2>
     <p class="section__subtitle">Что изменится через 8-12 встреч</p>
 
     <div class="benefits__grid">
       <div class="benefit-card">
-        <div class="benefit-card__number">85%</div>
+        <div class="benefit-card__number">✓</div>
         <h3 class="benefit-card__title">Снижение тревоги</h3>
-        <p class="benefit-card__description">Клиентов отмечают значительное снижение тревожности с 8-9 баллов до 2-3
-          баллов по шкале оценки после курса терапии. Вы перестанете постоянно беспокоиться о будущем.</p>
+        <p class="benefit-card__description">Клиенты отмечают значительное снижение тревожности с 8-9 баллов до 2-3
+          баллов по шкале оценки после курса консультаций. Вы перестанете постоянно беспокоиться о будущем.</p>
       </div>
 
       <div class="benefit-card">
-        <div class="benefit-card__number">90%</div>
+        <div class="benefit-card__number">✓</div>
         <h3 class="benefit-card__title">Контроль над паническими атаками</h3>
         <p class="benefit-card__description">Приступы паники либо прекращаются полностью, либо становятся редкими и
           управляемыми. Вы знаете, как справляться с симптомами.</p>
       </div>
 
       <div class="benefit-card">
-        <div class="benefit-card__number">80%</div>
+        <div class="benefit-card__number">✓</div>
         <h3 class="benefit-card__title">Улучшение сна</h3>
         <p class="benefit-card__description">Засыпаете за 15-20 минут вместо часов беспокойных мыслей. Сон становится
           глубоким и восстанавливающим.</p>
       </div>
 
       <div class="benefit-card">
-        <div class="benefit-card__number">75%</div>
+        <div class="benefit-card__number">✓</div>
         <h3 class="benefit-card__title">Навыки управления стрессом</h3>
         <p class="benefit-card__description">Получаете конкретные техники, которые работают в сложных ситуациях — на
           работе, в отношениях, в повседневной жизни.</p>
@@ -417,8 +417,8 @@
         <strong>Метод: КПТ</strong><br>(когнитивно-поведенческая терапия)
       </div>
       <p class="method-description">
-        Доказанная эффективность в работе с тревожными расстройствами.
-        <strong>8 из 10 клиентов</strong> достигают значительного улучшения за 8-12 сессий.
+        Научно обоснованный метод работы с тревожными расстройствами.
+        <strong>8 из 10 клиентов</strong> отмечают значительное улучшение за 8-12 сессий.
       </p>
     </div>
   </div>
@@ -446,7 +446,7 @@
 
           <p>Специализируюсь на когнитивно-поведенческой терапии (КПТ) — научно обоснованном методе работы с
             тревогой и паническими атаками, а также синтон-подходе и нейрокогнитивном переобучении. Мои клиенты
-            отмечают значительное снижение тревоги после курса терапии. Помогла более 200 клиентам вернуть контроль над
+            отмечают значительное снижение тревоги после курса консультаций. Помогла более 200 клиентам вернуть контроль над
             своей жизнью.</p>
 
           <p>Работаю только онлайн, что позволяет вам получать помощь из любой точки мира в комфортной и безопасной
@@ -491,7 +491,7 @@
                   d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
               <h4>Прозрачные цели</h4>
-              <p>С первой встречи составляем план терапии с конкретными целями и критериями успеха.</p>
+              <p>С первой встречи составляем план работы с конкретными целями и критериями успеха.</p>
             </div>
           </div>
         </div>
@@ -526,7 +526,7 @@
       <div class="step">
         <div class="step__number">2</div>
         <div class="step__content">
-          <h3 class="step__title">План терапии</h3>
+          <h3 class="step__title">План работы</h3>
           <p class="step__description">
             На первой полноценной встрече (60 минут) мы составляем индивидуальный план работы: определяем цели, выбираем техники КПТ, договариваемся о критериях успеха. Вы понимаете, к чему идете.
           </p>
@@ -538,7 +538,7 @@
         <div class="step__content">
           <h3 class="step__title">Регулярные сессии — 8-15 встреч</h3>
           <p class="step__description">
-            Встречаемся 1 раз в неделю по 60 минут онлайн. Работаем с тревожными мыслями, изучаем техники релаксации, проводим экспозиционную терапию (если нужно). После каждой сессии — домашнее задание для закрепления.
+            Встречаемся 1 раз в неделю по 60 минут онлайн. Работаем с тревожными мыслями, изучаем техники релаксации, проводим экспозиционную работу (если нужно). После каждой сессии — домашнее задание для закрепления.
           </p>
         </div>
       </div>
@@ -548,7 +548,7 @@
         <div class="step__content">
           <h3 class="step__title">Закрепление результата</h3>
           <p class="step__description">
-            Когда цели достигнуты, мы переходим к завершению терапии: подводим итоги, создаем план профилактики рецидивов, договариваемся о поддерживающих встречах (если нужно). Вы уходите с набором инструментов на всю жизнь.
+            Когда цели достигнуты, мы переходим к завершению работы: подводим итоги, создаем план профилактики рецидивов, договариваемся о поддерживающих встречах (если нужно). Вы уходите с набором инструментов на всю жизнь.
           </p>
         </div>
       </div>
@@ -860,7 +860,7 @@
         <li><strong>Конфиденциальность:</strong> Все разговоры остаются между нами. Я не записываю сессии без вашего
           разрешения.</li>
         <li><strong>* Гарантия:</strong> Если после 5 сессий вы не видите улучшений и выполняли домашние задания,
-          возвращаю 50% стоимости пакета.</li>
+          возвращаю часть стоимости пакета.</li>
       </ul>
     </div>
 
@@ -880,16 +880,16 @@
       <div class="faq-item">
         <h3 class="faq-item__question">А если не поможет?</h3>
         <div class="faq-item__answer">
-          <p>КПТ имеет доказанную эффективность 75-85% при тревожных расстройствах. Это подтверждено сотнями
+          <p>КПТ — научно обоснованный метод работы с тревожными расстройствами, подтвержденный сотнями
             исследований. Но важно понимать: результат зависит не только от терапевта, но и от вашего участия.</p>
           <p>Если вы будете посещать сессии регулярно, выполнять домашние задания и открыто обсуждать трудности — шансы
             на успех очень высоки. Если после 5 сессий вы не видите прогресса, мы обсудим это и при необходимости
-            скорректируем план или вернем 50% стоимости пакета.</p>
+            скорректируем план или вернем часть стоимости пакета.</p>
         </div>
       </div>
 
       <div class="faq-item">
-        <h3 class="faq-item__question">Сколько времени займет терапия?</h3>
+        <h3 class="faq-item__question">Сколько времени займет работа?</h3>
         <div class="faq-item__answer">
           <p>Большинство клиентов видят значительное улучшение за 8-12 сессий (2-3 месяца при еженедельных встречах).
             Это одно из главных преимуществ КПТ перед другими методами — она краткосрочная и результативная.</p>
@@ -929,12 +929,12 @@
       <div class="faq-item">
         <h3 class="faq-item__question">5000&nbsp;₽ за час — не дорого ли?</h3>
         <div class="faq-item__answer">
-          <p>Давайте посчитаем. Средняя стоимость КПТ-терапевта в Москве — 4000-7000&nbsp;₽. Полный курс терапии
+          <p>Давайте посчитаем. Полный курс консультаций
             при тревоге (10 сессий) — это 45000&nbsp;₽ при покупке пакета.</p>
           <p>Сравните с альтернативами:</p>
           <ul>
-            <li>Годы посещения обычного психолога без результата — 200000 - 500000&nbsp;₽</li>
-            <li>Лекарства от тревоги (временный эффект, побочки) — 5000-10000&nbsp;₽/месяц бесконечно</li>
+            <li>Годы посещения обычного психолога без результата — 200&nbsp;000 - 500&nbsp;000&nbsp;₽</li>
+            <li>Лекарства от тревоги (временный эффект, побочки) — 5&nbsp;000-10&nbsp;000&nbsp;₽/месяц бесконечно</li>
             <li>Потеря работоспособности из-за панических атак — бесценно</li>
           </ul>
           <br>
@@ -1004,7 +1004,7 @@
 
       
       <div class="quiz__question" data-question="4" style="display: none;">
-        <h3 class="quiz__question-text">Что для вас важнее всего в терапии?</h3>
+        <h3 class="quiz__question-text">Что для вас важнее всего в консультациях?</h3>
         <div class="quiz__answers">
           <button class="quiz__answer" data-answer="quick_result">Быстрый результат</button>
           <button class="quiz__answer" data-answer="deep_understanding">Глубокое понимание проблемы</button>
@@ -1026,7 +1026,7 @@
           <div class="quiz__info-divider"></div>
 
           <p class="quiz__info-text quiz__info-text--secondary">
-            <strong>После первой встречи</strong> вы решите, хотите ли продолжить терапию.<br>
+            <strong>После первой встречи</strong> вы решите, хотите ли продолжить консультации.<br>
             Дальнейшие сессии — платные:
           </p>
 
@@ -1140,7 +1140,7 @@
        data-position="floating-nav"
        data-target="about">
       <span class="floating-nav__item-title">Обо мне и методе</span>
-      <span class="floating-nav__item-desc">Узнайте больше о моей квалификации, опыте и подходе к терапии</span>
+      <span class="floating-nav__item-desc">Узнайте больше о моей квалификации, опыте и подходе к работе</span>
     </a>
 
     <a href="#format"
