--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -8,7 +8,7 @@
 
   <title>Психолог онлайн — Помощь при тревоге и панических атаках</title>
   <meta name="description"
-    content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%. Онлайн консультации, конфиденциально.">
+    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
   <meta name="keywords"
     content="психолог онлайн тревожность, психотерапия тревоги онлайн, панические атаки психолог онлайн, КПТ тревога онлайн, когнитивно-поведенческая терапия, психотерапевт онлайн">
   <meta name="author" content="Ксения Парваткина">
@@ -27,7 +27,7 @@
   <meta property="og:url" content="http://localhost:1313/v/b/">
   <meta property="og:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta property="og:description"
-    content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%. Онлайн консультации, конфиденциально.">
+    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
   
   
   <meta property="og:image" content="http://localhost:1313/images/psychologist-portrait_hu_85f12c48c6b6ccf5.jpg">
@@ -41,7 +41,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Психолог онлайн: Помощь при тревожности КПТ | Ксения Парваткина">
   <meta name="twitter:description"
-    content="Избавьтесь от тревоги за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) с доказанной эффективностью 85%.">
+    content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод.">
   
   
   <meta name="twitter:image" content="http://localhost:1313/images/psychologist-portrait_hu_85f12c48c6b6ccf5.jpg">
@@ -155,7 +155,7 @@
       <div class="hero__content">
         <h1 class="hero__title">Представьте: вы просыпаетесь без тяжести в груди</h1>
 
-        <p class="hero__subtitle">Через 2-3 месяца это станет вашей реальностью. Не через годы терапии — через 8-12 встреч.</p>
+        <p class="hero__subtitle">Через 2-3 месяца это станет вашей реальностью. Не через годы консультаций — через 8-12 встреч.</p>
 
         <div class="hero__badges">
           <span class="badge">847 человек уже прошли этот путь</span>
@@ -248,7 +248,7 @@
         <div class="timeline-block" style="background: linear-gradient(135deg, #e8f8e8 0%, #d4edd4 100%); padding: 24px; border-radius: 12px; border-left: 4px solid #25D366;">
           <h3 style="font-size: 20px; margin-bottom: 12px; color: #25D366;">Через 2-3 месяца</h3>
           <ul style="list-style: none; padding: 0;">
-            <li style="padding: 8px 0;">✓ Уровень тревоги снизится на <strong>70-85%</strong></li>
+            <li style="padding: 8px 0;">✓ Уровень тревоги значительно снизится (с 8-9 до 2-3 баллов)</li>
             <li style="padding: 8px 0;">✓ Вы вернёте контроль над своей жизнью</li>
             <li style="padding: 8px 0;">✓ Получите навыки, которые останутся с вами навсегда</li>
           </ul>
@@ -260,7 +260,7 @@
           <strong>Метод: КПТ</strong><br>(когнитивно-поведенческая терапия)
         </div>
         <p class="method-description">
-          Доказанная эффективность <strong>85%</strong> при тревожных расстройствах. Рекомендован ВОЗ.
+          Научно обоснованный метод работы с тревожными расстройствами. Рекомендован ВОЗ.
           Это не магия — это наука.
         </p>
       </div>
@@ -373,7 +373,7 @@
                     d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
                 <h4>Быстро</h4>
-                <p>8-15 сессий, не годы терапии.</p>
+                <p>8-15 сессий, не годы консультаций.</p>
               </div>
 
               <div class="principle">
@@ -485,7 +485,7 @@
           <ul class="pricing-card__features">
             <li>Полный курс КПТ — устойчивый результат</li>
             <li>Приоритетная запись</li>
-            <li>Гарантия: 50% возврат, если нет прогресса*</li>
+            <li>Гарантия: частичный возврат, если нет прогресса*</li>
           </ul>
 
           <div class="pricing-card__cta">
@@ -513,7 +513,7 @@
         <div class="faq-item">
           <h3 class="faq-item__question">«А вдруг мне не поможет?»</h3>
           <div class="faq-item__answer">
-            <p>КПТ работает в 85% случаев тревожных расстройств. Но я не беру всех подряд.</p>
+            <p>КПТ — научно обоснованный метод работы с тревожными расстройствами. Но я не беру всех подряд.</p>
             <p>На бесплатной диагностике мы поймём, подходит ли вам именно этот метод. Если нет — скажу честно и дам направление.</p>
           </div>
         </div>
@@ -604,7 +604,7 @@
 
       
       <div class="quiz__question" data-question="4" style="display: none;">
-        <h3 class="quiz__question-text">Что для вас важнее всего в терапии?</h3>
+        <h3 class="quiz__question-text">Что для вас важнее всего в консультациях?</h3>
         <div class="quiz__answers">
           <button class="quiz__answer" data-answer="quick_result">Быстрый результат</button>
           <button class="quiz__answer" data-answer="deep_understanding">Глубокое понимание проблемы</button>
@@ -626,7 +626,7 @@
           <div class="quiz__info-divider"></div>
 
           <p class="quiz__info-text quiz__info-text--secondary">
-            <strong>После первой встречи</strong> вы решите, хотите ли продолжить терапию.<br>
+            <strong>После первой встречи</strong> вы решите, хотите ли продолжить консультации.<br>
             Дальнейшие сессии — платные:
           </p>
 
@@ -740,7 +740,7 @@
        data-position="floating-nav"
        data-target="about">
       <span class="floating-nav__item-title">Обо мне и методе</span>
-      <span class="floating-nav__item-desc">Узнайте больше о моей квалификации, опыте и подходе к терапии</span>
+      <span class="floating-nav__item-desc">Узнайте больше о моей квалификации, опыте и подходе к работе</span>
     </a>
 
     <a href="#format"
