remove panic attack

--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -10,7 +10,7 @@
   <meta name="description"
     content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
   <meta name="keywords"
-    content="психолог онлайн тревожность, психотерапия тревоги онлайн, панические атаки психолог онлайн, КПТ тревога онлайн, когнитивно-поведенческая терапия, психотерапевт онлайн">
+    content="психолог онлайн тревожность, психотерапия тревоги онлайн, приступы тревоги психолог онлайн, КПТ тревога онлайн, когнитивно-поведенческая терапия, психотерапевт онлайн">
   <meta name="author" content="Ксения Парваткина">
 
   
@@ -57,7 +57,7 @@
         "@id": "http:\/\/localhost:1313\/#person",
         "name": "Ксения Парваткина",
         "jobTitle": "Психолог-психотерапевт",
-        "description": "Специализация: тревожные расстройства, панические атаки, КПТ",
+        "description": "Специализация: тревожные расстройства, приступы тревоги, КПТ",
         
         
         "image": "http:\/\/localhost:1313\/images\/psychologist-portrait.jpg",
@@ -66,7 +66,7 @@
         "sameAs": [
           "https://t.me/happy_habits_ru"
         ],
-        "knowsAbout": ["Когнитивно-поведенческая терапия", "Тревожные расстройства", "Панические атаки", "ОКР", "Психотерапия"],
+        "knowsAbout": ["Когнитивно-поведенческая терапия", "Тревожные расстройства", "Приступы тревоги", "ОКР", "Психотерапия"],
         "alumniOf": {
           "@type": "Organization",
           "name": "МИП"
@@ -76,7 +76,7 @@
         "@type": "ProfessionalService",
         "@id": "http:\/\/localhost:1313\/#service",
         "name": "Психолог онлайн — Ксения Парваткина",
-        "description": "Онлайн консультации психолога. Психологическая помощь при тревоге, панических атаках методом когнитивно-поведенческой терапии (КПТ).",
+        "description": "Онлайн консультации психолога. Психологическая помощь при тревоге, приступах тревоги методом когнитивно-поведенческой терапии (КПТ).",
         "url": "http:\/\/localhost:1313\/",
         "telephone": "+905071754633",
         "priceRange": "5000-45000 ₽",
@@ -192,7 +192,7 @@
           <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
           </svg>
-          Панические атаки — сердцебиение, нехватка воздуха, страх умереть
+          Приступы тревоги — сердцебиение, нехватка воздуха, страх умереть
         </li>
         <li class="symptom-item">
           <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
@@ -239,7 +239,7 @@
         <div class="timeline-block" style="background: linear-gradient(135deg, #e8f4f8 0%, #d4e8ed 100%); padding: 24px; border-radius: 12px; border-left: 4px solid var(--color-primary, #0088cc);">
           <h3 style="font-size: 20px; margin-bottom: 12px; color: var(--color-primary, #0088cc);">Через 2-4 недели</h3>
           <ul style="list-style: none; padding: 0;">
-            <li style="padding: 8px 0;">✓ Панические атаки станут реже или прекратятся совсем</li>
+            <li style="padding: 8px 0;">✓ Приступы тревоги станут реже или прекратятся совсем</li>
             <li style="padding: 8px 0;">✓ Вы научитесь «выключать» тревогу за 5-10 минут</li>
             <li style="padding: 8px 0;">✓ Сон наладится — засыпание за 15-20 минут вместо часов</li>
           </ul>
@@ -279,10 +279,10 @@
           <div style="font-size: 24px; font-weight: 700; color: var(--color-primary, #0088cc); margin-bottom: 8px;">
             «Я снова живу, а не выживаю»
           </div>
-          <div style="font-size: 14px; color: #666; margin-bottom: 16px;">Анна, 32 года — панические атаки</div>
+          <div style="font-size: 14px; color: #666; margin-bottom: 16px;">Анна, 32 года — приступы тревоги</div>
           <div style="display: grid; gap: 12px;">
-            <div><strong>До:</strong> 3-4 панические атаки в неделю, не могла ездить в метро</div>
-            <div><strong>После 10 сессий:</strong> паники прекратились полностью, вернулась на работу</div>
+            <div><strong>До:</strong> 3-4 приступа тревоги в неделю, не могла ездить в метро</div>
+            <div><strong>После 10 сессий:</strong> приступы прекратились полностью, вернулась на работу</div>
             <div style="color: #25D366; font-weight: 600;">8 месяцев спустя: рецидивов нет</div>
           </div>
         </div>
@@ -352,7 +352,7 @@
               <li><strong>8 лет</strong> частной практики, <strong>500+</strong> завершённых терапий</li>
               <li>Магистр психологии, <strong>МИП</strong></li>
               <li>Диплом по <strong>КПТ</strong> (когнитивно-поведенческая терапия)</li>
-              <li>Специализация: тревожные расстройства, паники, ОКР</li>
+              <li>Специализация: тревожные расстройства, приступы тревоги, ОКР</li>
             </ul>
           </div>
 
@@ -420,7 +420,7 @@
             <h3 class="step__title">Индивидуальный план</h3>
             <p class="step__description">
               На первой полной сессии (60 минут) определим конкретную цель: «снизить тревогу с 8/10 до 3/10» или
-              «прекратить панические атаки». Составим план: какие техники, сколько встреч.
+              «справиться с приступами тревоги». Составим план: какие техники, сколько встреч.
             </p>
           </div>
         </div>
@@ -572,7 +572,7 @@
         <h3 class="quiz__question-text">С чем вы хотели бы разобраться?</h3>
         <div class="quiz__answers">
           <button class="quiz__answer" data-answer="anxiety">Тревожность</button>
-          <button class="quiz__answer" data-answer="panic">Панические атаки</button>
+          <button class="quiz__answer" data-answer="panic">Приступы тревоги</button>
           <button class="quiz__answer" data-answer="stress">Стресс и выгорание</button>
           <button class="quiz__answer" data-answer="ocd">Навязчивые мысли (ОКР)</button>
           <button class="quiz__answer" data-answer="other">Другое</button>
