--- a/public/v/a/index.html
+++ b/public/v/a/index.html
@@ -10,7 +10,7 @@
   <meta name="description"
     content="Работа с тревогой за 8-12 сессий. Когнитивно-поведенческая терапия (КПТ) — научно обоснованный метод. Онлайн консультации, конфиденциально.">
   <meta name="keywords"
-    content="психолог онлайн тревожность, психотерапия тревоги онлайн, панические атаки психолог онлайн, КПТ тревога онлайн, когнитивно-поведенческая терапия, психотерапевт онлайн">
+    content="психолог онлайн тревожность, психотерапия тревоги онлайн, приступы тревоги психолог онлайн, КПТ тревога онлайн, когнитивно-поведенческая терапия, психотерапевт онлайн">
   <meta name="author" content="Ксения Парваткина">
 
   
@@ -59,7 +59,7 @@
         "@id": "http:\/\/localhost:1313\/#person",
         "name": "Ксения Парваткина",
         "jobTitle": "Психолог-психотерапевт",
-        "description": "Специализация: тревожные расстройства, панические атаки, КПТ",
+        "description": "Специализация: тревожные расстройства, приступы тревоги, КПТ",
         
         
         "image": "http:\/\/localhost:1313\/images\/psychologist-portrait.jpg",
@@ -325,7 +325,7 @@
         <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
-        Панические атаки — сердцебиение, нехватка воздуха, страх умереть
+        Приступы тревоги — сердцебиение, нехватка воздуха, страх умереть
       </li>
       <li class="symptom-item">
         <svg class="symptom-item__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
@@ -392,8 +392,8 @@
 
       <div class="benefit-card">
         <div class="benefit-card__number">✓</div>
-        <h3 class="benefit-card__title">Контроль над паническими атаками</h3>
-        <p class="benefit-card__description">Приступы паники либо прекращаются полностью, либо становятся редкими и
+        <h3 class="benefit-card__title">Контроль над приступами тревоги</h3>
+        <p class="benefit-card__description">Приступы либо прекращаются полностью, либо становятся редкими и
           управляемыми. Вы знаете, как справляться с симптомами.</p>
       </div>
 
@@ -893,7 +893,7 @@
         <div class="faq-item__answer">
           <p>Большинство клиентов видят значительное улучшение за 8-12 сессий (2-3 месяца при еженедельных встречах).
             Это одно из главных преимуществ КПТ перед другими методами — она краткосрочная и результативная.</p>
-          <p>Конечно, все индивидуально. При легкой тревоге может хватить 6-8 встреч. При панических атаках с избегающим
+          <p>Конечно, все индивидуально. При легкой тревоге может хватить 6-8 встреч. При приступах тревоги с избегающим
             поведением может потребоваться 12-15 сессий. На диагностической встрече я дам более точный прогноз для
             вашего случая.</p>
         </div>
@@ -935,7 +935,7 @@
           <ul>
             <li>Годы посещения обычного психолога без результата — 200&nbsp;000 - 500&nbsp;000&nbsp;₽</li>
             <li>Лекарства от тревоги (временный эффект, побочки) — 5&nbsp;000-10&nbsp;000&nbsp;₽/месяц бесконечно</li>
-            <li>Потеря работоспособности из-за панических атак — бесценно</li>
+            <li>Потеря работоспособности из-за приступов тревоги — бесценно</li>
           </ul>
           <br>
           <p>КПТ — это инвестиция в себя, которая окупается здоровьем и качеством жизни.</p>
@@ -972,7 +972,7 @@
         <h3 class="quiz__question-text">С чем вы хотели бы разобраться?</h3>
         <div class="quiz__answers">
           <button class="quiz__answer" data-answer="anxiety">Тревожность</button>
-          <button class="quiz__answer" data-answer="panic">Панические атаки</button>
+          <button class="quiz__answer" data-answer="panic">Приступы тревоги</button>
           <button class="quiz__answer" data-answer="stress">Стресс и выгорание</button>
           <button class="quiz__answer" data-answer="ocd">Навязчивые мысли (ОКР)</button>
           <button class="quiz__answer" data-answer="other">Другое</button>
